--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^4.1.1",
     "from-seconds": "^1.0.2",
     "glob": "^8.0.3",
+    "ini": "^3.0.1",
     "inquirer": "7.3.3",
     "is-valid-domain": "^0.1.5",
     "jwt-decode": "^3.1.2",
@@ -37,8 +38,7 @@
     "table-layout": "^3.0.0",
     "tar": "^4.4.18",
     "tar-stream": "^2.1.4",
-    "untildify": "3.0.3",
-    "ini": "^3.0.1"
+    "untildify": "3.0.3"
   },
   "pre-commit": [
     "build",
