--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
 		"edgekv": "./akamai-edgekv"
 	},
 	"dependencies": {
-		"akamai-edgegrid": "^3.1.4",
+		"akamai-edgegrid": "^3.3.0",
 		"cli-spinner": "0.2.10",
 		"commander": "^9.4.1",
 		"console.table": "0.10.0",
-		"crypto-js": "^4.1.1",
+		"crypto-js": "^4.2.0",
 		"from-seconds": "^1.0.2",
 		"glob": "^8.0.3",
 		"ini": "^3.0.1",
@@ -36,17 +36,21 @@
 		"readline-sync": "^1.4.10",
 		"sha256-file": "^1.0.0",
 		"table-layout": "^3.0.0",
-		"tar": "^4.4.18",
+		"tar": "^6.2.1",
 		"tar-stream": "^2.1.4",
 		"untildify": "3.0.3"
 	},
-	"pre-commit": ["build", "test:run", "lint"],
+	"pre-commit": [
+		"build",
+		"test:run",
+		"lint"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
 		"@babel/preset-env": "^7.18.9",
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/cli-spinner": "^0.2.1",
-		"@types/crypto-js": "^4.1.1",
+		"@types/crypto-js": "^4.2.0",
 		"@types/glob": "^8.0.0",
 		"@types/inquirer": "^9.0.2",
 		"@types/jest": "^28.1.6",
@@ -65,7 +69,7 @@
 		"jest": "^28.1.3",
 		"pre-commit": "^1.2.2",
 		"ts-jest": "^28.0.7",
-		"typescript": "^4.3"
+		"typescript": "^4.9.5"
 	},
 	"license": "Apache-2.0"
 }
