--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "akamai-edgeworkers-cli",
-	"version": "1.8.0",
+	"version": "1.9.0",
 	"description": "A tool that makes it easier to manage Akamai EdgeWorkers code bundles and EdgeKV databases. Call the EdgeWorkers and EdgeKV API from the command line.",
 	"repository": "https://github.com/akamai/cli-edgeworkers",
 	"scripts": {
@@ -38,7 +38,8 @@
 		"table-layout": "^3.0.0",
 		"tar": "^6.2.1",
 		"tar-stream": "^2.1.4",
-		"untildify": "3.0.3"
+		"untildify": "3.0.3",
+		"typescript": "^4.9.5"
 	},
 	"pre-commit": [
 		"build",
@@ -68,8 +69,7 @@
 		"eslint": "^8.20.0",
 		"jest": "^28.1.3",
 		"pre-commit": "^1.2.2",
-		"ts-jest": "^28.0.7",
-		"typescript": "^4.9.5"
+		"ts-jest": "^28.0.7"
 	},
 	"license": "Apache-2.0"
 }
